--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "dotenv -e ../.env -- prisma generate",
+    "prisma:migrate": "dotenv -e ../.env -- prisma migrate dev",
+    "prisma:studio": "dotenv -e ../.env -- prisma studio"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/config": "^3.1.1",
+    "@prisma/client": "^5.7.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1"
   },
@@ -40,7 +44,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "jest": "^29.7.0",
+    "dotenv-cli": "^7.3.0",
     "prettier": "^3.1.1",
+    "prisma": "^5.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "@types/supertest": "^6.0.2",
