--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -13,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-waltzai}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-waltzai} -d ${POSTGRES_DB:-campaign_analytics}"]
       interval: 10s
       timeout: 5s
       retries: 5
